# ChangeLog for x11-misc/xosview
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xosview/ChangeLog,v 1.68 2013/01/31 23:10:44 ago Exp $

  31 Jan 2013; Agostino Sarubbo <ago@gentoo.org> xosview-1.12.ebuild:
  Stable for ppc, wrt bug #454424

  31 Jan 2013; Agostino Sarubbo <ago@gentoo.org> xosview-1.12.ebuild:
  Stable for ppc64, wrt bug #454424

  30 Jan 2013; Agostino Sarubbo <ago@gentoo.org> xosview-1.12.ebuild:
  Stable for x86, wrt bug #454424

  29 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> xosview-1.12.ebuild:
  Stable on amd64, wrt bug #454424

  17 Dec 2012; Jeroen Roovers <jer@gentoo.org> -xosview-1.9.3.ebuild,
  -xosview-1.10.ebuild:
  Old.

  16 Dec 2012; Agostino Sarubbo <ago@gentoo.org> xosview-1.11.ebuild:
  Stable for ppc, wrt bug #446494

  16 Dec 2012; Agostino Sarubbo <ago@gentoo.org> xosview-1.11.ebuild:
  Stable for x86, wrt bug #446494

  10 Dec 2012; Agostino Sarubbo <ago@gentoo.org> xosview-1.11.ebuild:
  Stable for ppc64, wrt bug #446494

  09 Dec 2012; Sergey Popov <pinkbyte@gentoo.org> xosview-1.11.ebuild:
  Stable on amd64, wrt bug #446494

*xosview-1.12 (08 Dec 2012)

  08 Dec 2012; Jeroen Roovers <jer@gentoo.org> +xosview-1.12.ebuild:
  Version bump by Lars Wendler (bug #446396).

  17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> xosview-1.9.4.ebuild:
  x86 stable wrt bug #436988

*xosview-1.11 (15 Oct 2012)

  15 Oct 2012; Michael Weber <xmw@gentoo.org> +xosview-1.11.ebuild:
  Version bump (by polynomial-c, bug 438152)

  04 Oct 2012; Anthony G. Basile <blueness@gentoo.org> xosview-1.9.4.ebuild:
  stable ppc ppc64, bug #436988

  03 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> xosview-1.9.4.ebuild:
  amd64 stable, wrt bug #436988

*xosview-1.10 (02 Oct 2012)

  02 Oct 2012; Jeroen Roovers <jer@gentoo.org> -xosview-1.8.3-r1.ebuild,
  -files/xosview-1.8.3-alpha-build-fix.patch, -files/xosview-1.8.3-gcc44.patch,