@@ -1,8 +1,14 @@
-DIST xosview-1.11.tar.gz 134997 SHA256 5b78a7e680998f8511561b253ab5c6a96a90230da693797748bde0e02e81b950 SHA512 4587cf851b615f6f47030904755daa050ad2bcd4ab505e861b39d13fe3a8cb148f698219c939c4dca065b7d141a7b9a12333212f50f03e222574b8cd296b1408 WHIRLPOOL 38a4b4d793901a2d009c4fcda03cf4f07159556964e427dd4954e1715837c507df9ff840d0ffee00d7dfd1c87542a114a56b9032e43db0f300f5dcbb55efd5ff
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST xosview-1.12.tar.gz 134970 SHA256 24c7db88854af3b35683ebbcaa2dcb0ec3fd25df677af5713e25b4b5fa1b3c9b SHA512 e4f24a7cabe04fa3ede4448e823ab37b2b7ee5bd96a9cb7ca5d6c384e14eed331f6de79d7e1f1e735f57659cb66650c880e8719966753b3fe64947ed4bbfe732 WHIRLPOOL da280004205caa57cf4c9799d62f471f65d5b3952f7cfa7ff03f7aaa0b6c3af9f4bc2f7a50a271b316e9e926d48f1a4e405d7e74203a431157a24a40fabecd51
-DIST xosview-1.9.4.tar.gz 139463 SHA256 5d65457fcc885560946d144846d149c0c9ec8f963f7449c5190e94c7ae3b97ba SHA512 c0b50ec40794017bf9d6a6e21464e20d105b6fdd4d8745f66b94d66167c3d908cae841b9cd124113f29bd08da6ba67f8cc614a91599c84ebc666bd994bf2d924 WHIRLPOOL 6f2355a77dfb68ddf40eee2f6aa56b6272dece7f43e8a2b23cb5eabcc578479da26cf520f45438395994426026316beb464ad1a115b57d2359c46808eeb0ba0b
-EBUILD xosview-1.11.ebuild 1174 SHA256 18857509a86d5c1737b76334f128096753cd580d0e0761f8ca2ef6a06f56c543 SHA512 5f79c7ae622c6599fdb4e665ce0acba172cff82b1148148d0543d0f82b41528c11ea72a7b182a7b9e1540179a52916c532c3895e1bef145e254330891980f277 WHIRLPOOL 255382e6723bd54f210926d07413f073cfc76aa3d39748c7aeec2cb2501f35b6cf7400c8c4bb14590a8e8be84a3ea8f206c8ae3895185e32a70160c60a6a4cfc
 EBUILD xosview-1.12.ebuild 1174 SHA256 f4b9a836680aac710a11e97ad98c93629034e4be50978e0993a47b11bf6d891b SHA512 19af899768f64a20388d0d0ea1c40327ce281c550a130478035991267733fe4aed2b6af5a0f769a43a50d39c2a1a942ba9f27c5546710425ff5226270a74ea88 WHIRLPOOL b6b2901e1623cea1e6b319a85ac9895ca5ca30c315ca71a74f5a0530b0e128fd0729afa87e804cef006ab82ff653cef969709ffb28893540bda19b28a8fa1d51
-EBUILD xosview-1.9.4.ebuild 1182 SHA256 b9acefdebca1ec039421b80c3a408f2009a9d2d3eb7617c96057d549d3676036 SHA512 982882e8178e226d8ceabe2f18d2f341ab98fccfff4d416f64b1673c61d6bea1a24fa4ef334c0eec70e78601c07970ac6d2346f2b2d92876e457d5408196d0d6 WHIRLPOOL 146bc7481a312f355fee977bb1d70223f3d587a6f9d7d0409085b22eb9031b5e48a3aa5a02a1a2ae613e7945ee5f1a04a7cbe1a568f2d861cb6266a8f65ba0fb
-MISC ChangeLog 10652 SHA256 870a78a8938e4e4840ee2f63fd4a76b21fb3585920b6c8fa2493da0bd75ced19 SHA512 d80bdc3128ba98e563058d3e6c5886c8c142daff5c72858dfe6c44ce2fcd6039a586a4187d3b168e340b4d47b51c290fbe6421419271272b194ac285e0b5e3ce WHIRLPOOL ff27c16905de077411876d9152a0420d4f3209c98e6d92b4d8691f537dc9f96a56555cebf35e466980e9ba9a5510f63eae677920336c9b95c318aa8a143620fe
+MISC ChangeLog 10754 SHA256 243dd75fc840e12ea223d2084c5350d0d3666faddb1f80276e6c55a76fa3181e SHA512 213917c9729883dca3dd25d493281508068d25fe110395f6f70a4ff2db8dbde48acc55e745a5bf7773f9c50d8ed9990d20c24003fd37e4ec98dc5ee149ec2947 WHIRLPOOL 6c7e3d3c3f48f05ccb209d58d33b31631134837d1a143c6d10ad62fb444333120eff3e60278bf41e49c86523e81bb802662a6d28ee609d3a0da7fd38ecdd673d
 MISC metadata.xml 173 SHA256 2f2c48f12680e78f700e809ba6ff98c67b1ea8b707291659c1bfb6b20d28835f SHA512 0f9f902a37286192de62589f1aace6bec3cfe2a8511ac95e98b55324a9da1a5e79b8f14316e1be0b818e90c0be0cec5fe16f75d9055301a774b241e1486f62c2 WHIRLPOOL 0d0c57c7890f2cdb7210d2d1d61d03d412478747414999bc7919d70b8243ddc66d7903df50158671e8cc454913b4d859f752bbe3709404aa15608e1f1234d717
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlEhDE0ACgkQVWmRsqeSphM4CwCeMuuPbOd6BleGRtpiuQPw2i8O
+HNIAnRs79ShQGRofG89XMY294aaZlxaC
+=WOth
+-----END PGP SIGNATURE-----
