@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/xosview
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xosview/ChangeLog,v 1.68 2013/01/31 23:10:44 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xosview/ChangeLog,v 1.69 2013/02/17 16:58:52 jer Exp $
+
+  17 Feb 2013; Jeroen Roovers <jer@gentoo.org> -xosview-1.11.ebuild,
+  -xosview-1.9.4.ebuild:
+  Old.
 
   31 Jan 2013; Agostino Sarubbo <ago@gentoo.org> xosview-1.12.ebuild:
   Stable for ppc, wrt bug #454424
